--- a/Meditator/IntervalCell.xib
+++ b/Meditator/IntervalCell.xib
@@ -13,108 +13,102 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="252"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNb-3S-Vjk">
-                        <rect key="frame" x="20" y="188" width="44" height="44"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNb-3S-Vjk">
+                        <rect key="frame" x="19" y="188" width="50" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="Lv7-lY-yHQ"/>
-                            <constraint firstAttribute="width" constant="44" id="vbu-4a-saT"/>
+                            <constraint firstAttribute="width" constant="50" id="vbu-4a-saT"/>
                         </constraints>
-                        <state key="normal" title="0">
-                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
+                        <state key="normal" title="0"/>
                     </button>
-                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AIg-7Z-ClE">
-                        <rect key="frame" x="79" y="188" width="44" height="44"/>
+                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AIg-7Z-ClE">
+                        <rect key="frame" x="77" y="188" width="50" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="44" id="N2g-U5-azi"/>
+                            <constraint firstAttribute="width" constant="50" id="N2g-U5-azi"/>
                             <constraint firstAttribute="height" constant="44" id="X2j-Zq-yXj"/>
                         </constraints>
-                        <state key="normal" title="1">
-                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
+                        <state key="normal" title="1"/>
                     </button>
-                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o34-ap-K9R">
-                        <rect key="frame" x="138" y="188" width="44" height="44"/>
+                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o34-ap-K9R">
+                        <rect key="frame" x="135" y="188" width="50" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="44" id="VoP-I7-qa5"/>
+                            <constraint firstAttribute="width" constant="50" id="VoP-I7-qa5"/>
                             <constraint firstAttribute="height" constant="44" id="afH-EE-I6Z"/>
                         </constraints>
-                        <state key="normal" title="2">
-                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
+                        <state key="normal" title="2"/>
                     </button>
-                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2s4-Ck-NSc">
-                        <rect key="frame" x="197" y="188" width="44" height="44"/>
+                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2s4-Ck-NSc">
+                        <rect key="frame" x="193" y="188" width="50" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="44" id="Io4-Ii-ccZ"/>
+                            <constraint firstAttribute="width" constant="50" id="Io4-Ii-ccZ"/>
                             <constraint firstAttribute="height" constant="44" id="nu3-qJ-kyL"/>
                         </constraints>
-                        <state key="normal" title="3">
-                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
+                        <state key="normal" title="3"/>
                     </button>
-                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tiv-Wy-4ZJ">
-                        <rect key="frame" x="256" y="188" width="44" height="44"/>
+                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tiv-Wy-4ZJ">
+                        <rect key="frame" x="251" y="188" width="50" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="44" id="7dd-gc-bJm"/>
+                            <constraint firstAttribute="width" constant="50" id="7dd-gc-bJm"/>
                             <constraint firstAttribute="height" constant="44" id="KaN-Ne-atd"/>
                         </constraints>
-                        <state key="normal" title="4">
-                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
+                        <state key="normal" title="4"/>
                     </button>
                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aOh-b0-dv4">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     </pickerView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JDh-Gr-2TG">
-                        <rect key="frame" x="266" y="150" width="34" height="30"/>
+                        <rect key="frame" x="266" y="20" width="34" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" title="reset">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="odB-nq-vLq">
-                        <rect key="frame" x="263" y="20" width="37" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="odB-nq-vLq">
+                        <rect key="frame" x="20" y="20" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <state key="normal" title="basic">
+                        <state key="normal" title="-">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interval 1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ode-MX-LeD">
+                        <rect key="frame" x="20" y="159" width="71" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="JDh-Gr-2TG" secondAttribute="trailing" constant="20" id="2kr-me-Y1H"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="AIg-7Z-ClE" secondAttribute="centerY" id="AGU-t7-5rR"/>
-                    <constraint firstItem="2s4-Ck-NSc" firstAttribute="leading" secondItem="o34-ap-K9R" secondAttribute="trailing" constant="15" id="Ajt-Vz-fNP"/>
-                    <constraint firstItem="TNb-3S-Vjk" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" constant="20" id="D8P-wd-LuQ"/>
+                    <constraint firstItem="2s4-Ck-NSc" firstAttribute="leading" secondItem="o34-ap-K9R" secondAttribute="trailing" constant="8" id="Ajt-Vz-fNP"/>
+                    <constraint firstItem="TNb-3S-Vjk" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" constant="19" id="D8P-wd-LuQ"/>
                     <constraint firstItem="aOh-b0-dv4" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" id="FSC-S7-Anc"/>
-                    <constraint firstItem="AIg-7Z-ClE" firstAttribute="leading" secondItem="TNb-3S-Vjk" secondAttribute="trailing" constant="15" id="Kvc-99-vHy"/>
+                    <constraint firstItem="AIg-7Z-ClE" firstAttribute="leading" secondItem="TNb-3S-Vjk" secondAttribute="trailing" constant="8" id="Kvc-99-vHy"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="tiv-Wy-4ZJ" secondAttribute="centerY" id="QVV-nL-vCE"/>
                     <constraint firstItem="aOh-b0-dv4" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" id="ScU-87-CK8"/>
-                    <constraint firstItem="o34-ap-K9R" firstAttribute="leading" secondItem="AIg-7Z-ClE" secondAttribute="trailing" constant="15" id="UYs-2a-RZU"/>
+                    <constraint firstItem="o34-ap-K9R" firstAttribute="leading" secondItem="AIg-7Z-ClE" secondAttribute="trailing" constant="8" id="UYs-2a-RZU"/>
                     <constraint firstItem="TNb-3S-Vjk" firstAttribute="top" secondItem="aOh-b0-dv4" secondAttribute="bottom" constant="8" id="Y7P-2V-UaP"/>
-                    <constraint firstItem="tiv-Wy-4ZJ" firstAttribute="leading" secondItem="2s4-Ck-NSc" secondAttribute="trailing" constant="15" id="i10-eX-rEP"/>
+                    <constraint firstItem="ode-MX-LeD" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" constant="20" id="aw1-gZ-GpN"/>
+                    <constraint firstItem="JDh-Gr-2TG" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" constant="20" symbolic="YES" id="cu8-6f-JvQ"/>
+                    <constraint firstItem="odB-nq-vLq" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" constant="20" symbolic="YES" id="hDJ-Pn-ZBc"/>
+                    <constraint firstItem="tiv-Wy-4ZJ" firstAttribute="leading" secondItem="2s4-Ck-NSc" secondAttribute="trailing" constant="8" id="i10-eX-rEP"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="2s4-Ck-NSc" secondAttribute="centerY" id="jUw-gr-Fkx"/>
+                    <constraint firstItem="ode-MX-LeD" firstAttribute="bottom" secondItem="aOh-b0-dv4" secondAttribute="bottom" id="l8H-RG-uG8"/>
+                    <constraint firstItem="odB-nq-vLq" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" constant="20" symbolic="YES" id="mdp-Kk-PJr"/>
                     <constraint firstAttribute="bottom" secondItem="TNb-3S-Vjk" secondAttribute="bottom" constant="20" id="oWv-aN-vHY"/>
-                    <constraint firstItem="JDh-Gr-2TG" firstAttribute="bottom" secondItem="aOh-b0-dv4" secondAttribute="bottom" id="piV-cT-Zpo"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="TNb-3S-Vjk" secondAttribute="centerY" id="qtu-uW-jWD"/>
-                    <constraint firstAttribute="trailing" secondItem="odB-nq-vLq" secondAttribute="trailing" constant="20" id="t4w-NJ-474"/>
                     <constraint firstAttribute="trailing" secondItem="aOh-b0-dv4" secondAttribute="trailing" id="xvC-mM-eDl"/>
-                    <constraint firstItem="odB-nq-vLq" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" constant="20" id="zdQ-3c-fsg"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="buttonHeightConstraint" destination="Lv7-lY-yHQ" id="rPc-br-lLU"/>
+                <outlet property="intervalLabel" destination="ode-MX-LeD" id="IhC-Xd-orR"/>
                 <outlet property="minutePickerView" destination="aOh-b0-dv4" id="fKw-kF-LWK"/>
                 <outlet property="minutePickerViewToButtonArrayConstraint" destination="oWv-aN-vHY" id="Nvg-a5-H34"/>
                 <outlet property="resetButton" destination="JDh-Gr-2TG" id="ONc-SO-TRM"/>
