--- a/Meditator/SingleIntervalCell.xib
+++ b/Meditator/SingleIntervalCell.xib
@@ -18,29 +18,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     </pickerView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mb3-b6-mG9">
-                        <rect key="frame" x="266" y="129" width="34" height="30"/>
+                        <rect key="frame" x="266" y="20" width="34" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" title="reset">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w2b-qp-lxm">
-                        <rect key="frame" x="242" y="20" width="58" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w2b-qp-lxm">
+                        <rect key="frame" x="20" y="20" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <state key="normal" title="intervals">
+                        <state key="normal" title="+">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="w2b-qp-lxm" secondAttribute="trailing" constant="20" id="DkT-RO-Uo4"/>
                     <constraint firstAttribute="trailing" secondItem="mb3-b6-mG9" secondAttribute="trailing" constant="20" id="FJi-d4-Kuu"/>
                     <constraint firstItem="hiw-Lt-Qyf" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="GyJ-qw-czj"/>
-                    <constraint firstItem="w2b-qp-lxm" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" constant="20" id="VXz-xM-OU2"/>
+                    <constraint firstItem="mb3-b6-mG9" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" constant="20" symbolic="YES" id="Mzh-ak-AUK"/>
+                    <constraint firstItem="w2b-qp-lxm" firstAttribute="leading" secondItem="Yrj-js-DDY" secondAttribute="leading" constant="20" id="Qmq-BC-g3s"/>
                     <constraint firstItem="hiw-Lt-Qyf" firstAttribute="leading" secondItem="Yrj-js-DDY" secondAttribute="leading" id="Vos-aX-tL5"/>
                     <constraint firstAttribute="trailing" secondItem="hiw-Lt-Qyf" secondAttribute="trailing" id="eVe-Xz-fcl"/>
                     <constraint firstAttribute="bottom" secondItem="hiw-Lt-Qyf" secondAttribute="bottom" constant="17" id="sON-Dt-h5y"/>
-                    <constraint firstAttribute="bottom" secondItem="mb3-b6-mG9" secondAttribute="bottom" constant="20" id="t22-zb-WlG"/>
+                    <constraint firstItem="w2b-qp-lxm" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" constant="20" symbolic="YES" id="tMd-S3-ONO"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
