--- a/Meditator/IntervalCell.xib
+++ b/Meditator/IntervalCell.xib
@@ -63,15 +63,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     </pickerView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JDh-Gr-2TG">
-                        <rect key="frame" x="266" y="20" width="34" height="30"/>
+                        <rect key="frame" x="276" y="0.0" width="44" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="44" id="2t9-uh-H83"/>
+                            <constraint firstAttribute="width" constant="44" id="ZPM-4J-tgq"/>
+                        </constraints>
                         <state key="normal" title="reset">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="odB-nq-vLq">
-                        <rect key="frame" x="20" y="20" width="30" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="odB-nq-vLq">
+                        <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="44" id="ES7-0B-LKR"/>
+                            <constraint firstAttribute="width" constant="44" id="bXd-ef-VZf"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                         <state key="normal" title="-">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -84,7 +93,7 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="JDh-Gr-2TG" secondAttribute="trailing" constant="20" id="2kr-me-Y1H"/>
+                    <constraint firstAttribute="trailing" secondItem="JDh-Gr-2TG" secondAttribute="trailing" id="2kr-me-Y1H"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="AIg-7Z-ClE" secondAttribute="centerY" id="AGU-t7-5rR"/>
                     <constraint firstItem="2s4-Ck-NSc" firstAttribute="leading" secondItem="o34-ap-K9R" secondAttribute="trailing" constant="8" id="Ajt-Vz-fNP"/>
                     <constraint firstItem="TNb-3S-Vjk" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" constant="19" id="D8P-wd-LuQ"/>
@@ -93,27 +102,26 @@
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="tiv-Wy-4ZJ" secondAttribute="centerY" id="QVV-nL-vCE"/>
                     <constraint firstItem="aOh-b0-dv4" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" id="ScU-87-CK8"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="leading" secondItem="AIg-7Z-ClE" secondAttribute="trailing" constant="8" id="UYs-2a-RZU"/>
-                    <constraint firstItem="TNb-3S-Vjk" firstAttribute="top" secondItem="aOh-b0-dv4" secondAttribute="bottom" constant="8" id="Y7P-2V-UaP"/>
                     <constraint firstItem="ode-MX-LeD" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" constant="20" id="aw1-gZ-GpN"/>
-                    <constraint firstItem="JDh-Gr-2TG" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" constant="20" symbolic="YES" id="cu8-6f-JvQ"/>
-                    <constraint firstItem="odB-nq-vLq" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" constant="20" symbolic="YES" id="hDJ-Pn-ZBc"/>
+                    <constraint firstItem="TNb-3S-Vjk" firstAttribute="top" secondItem="aOh-b0-dv4" secondAttribute="bottom" constant="8" symbolic="YES" id="bAq-cm-elG"/>
+                    <constraint firstItem="JDh-Gr-2TG" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" id="cu8-6f-JvQ"/>
+                    <constraint firstItem="odB-nq-vLq" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" id="hDJ-Pn-ZBc"/>
                     <constraint firstItem="tiv-Wy-4ZJ" firstAttribute="leading" secondItem="2s4-Ck-NSc" secondAttribute="trailing" constant="8" id="i10-eX-rEP"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="2s4-Ck-NSc" secondAttribute="centerY" id="jUw-gr-Fkx"/>
                     <constraint firstItem="ode-MX-LeD" firstAttribute="bottom" secondItem="aOh-b0-dv4" secondAttribute="bottom" id="l8H-RG-uG8"/>
-                    <constraint firstItem="odB-nq-vLq" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" constant="20" symbolic="YES" id="mdp-Kk-PJr"/>
+                    <constraint firstItem="odB-nq-vLq" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" id="mdp-Kk-PJr"/>
                     <constraint firstAttribute="bottom" secondItem="TNb-3S-Vjk" secondAttribute="bottom" constant="20" id="oWv-aN-vHY"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="TNb-3S-Vjk" secondAttribute="centerY" id="qtu-uW-jWD"/>
                     <constraint firstAttribute="trailing" secondItem="aOh-b0-dv4" secondAttribute="trailing" id="xvC-mM-eDl"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="buttonArrayToBottomConstraint" destination="oWv-aN-vHY" id="Eho-Wh-Ywn"/>
                 <outlet property="buttonHeightConstraint" destination="Lv7-lY-yHQ" id="rPc-br-lLU"/>
                 <outlet property="intervalLabel" destination="ode-MX-LeD" id="IhC-Xd-orR"/>
                 <outlet property="minutePickerView" destination="aOh-b0-dv4" id="fKw-kF-LWK"/>
-                <outlet property="minutePickerViewToButtonArrayConstraint" destination="oWv-aN-vHY" id="Nvg-a5-H34"/>
                 <outlet property="resetButton" destination="JDh-Gr-2TG" id="ONc-SO-TRM"/>
                 <outlet property="toggleIntervalsButton" destination="odB-nq-vLq" id="CxF-ES-uAp"/>
-                <outlet property="topToMinutePickerViewConstraint" destination="Y7P-2V-UaP" id="Qbk-GI-gMY"/>
                 <outletCollection property="buttonArray" destination="TNb-3S-Vjk" id="qq4-Lg-4zh"/>
                 <outletCollection property="buttonArray" destination="AIg-7Z-ClE" id="Jes-l8-gqy"/>
                 <outletCollection property="buttonArray" destination="o34-ap-K9R" id="Uz5-da-ChD"/>
