--- a/Meditator/SingleIntervalCell.xib
+++ b/Meditator/SingleIntervalCell.xib
@@ -18,29 +18,37 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     </pickerView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mb3-b6-mG9">
-                        <rect key="frame" x="266" y="20" width="34" height="30"/>
+                        <rect key="frame" x="276" y="0.0" width="44" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="44" id="ILb-Gw-QLy"/>
+                            <constraint firstAttribute="width" constant="44" id="N5U-3N-lZr"/>
+                        </constraints>
                         <state key="normal" title="reset">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w2b-qp-lxm">
-                        <rect key="frame" x="20" y="20" width="30" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w2b-qp-lxm">
+                        <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="44" id="lsl-2s-tjm"/>
+                            <constraint firstAttribute="width" constant="44" id="wI0-GW-NRZ"/>
+                        </constraints>
                         <state key="normal" title="+">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="mb3-b6-mG9" secondAttribute="trailing" constant="20" id="FJi-d4-Kuu"/>
+                    <constraint firstAttribute="trailing" secondItem="mb3-b6-mG9" secondAttribute="trailing" id="FJi-d4-Kuu"/>
                     <constraint firstItem="hiw-Lt-Qyf" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="GyJ-qw-czj"/>
-                    <constraint firstItem="mb3-b6-mG9" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" constant="20" symbolic="YES" id="Mzh-ak-AUK"/>
-                    <constraint firstItem="w2b-qp-lxm" firstAttribute="leading" secondItem="Yrj-js-DDY" secondAttribute="leading" constant="20" id="Qmq-BC-g3s"/>
+                    <constraint firstItem="mb3-b6-mG9" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="Mzh-ak-AUK"/>
+                    <constraint firstItem="w2b-qp-lxm" firstAttribute="leading" secondItem="Yrj-js-DDY" secondAttribute="leading" id="Qmq-BC-g3s"/>
                     <constraint firstItem="hiw-Lt-Qyf" firstAttribute="leading" secondItem="Yrj-js-DDY" secondAttribute="leading" id="Vos-aX-tL5"/>
                     <constraint firstAttribute="trailing" secondItem="hiw-Lt-Qyf" secondAttribute="trailing" id="eVe-Xz-fcl"/>
                     <constraint firstAttribute="bottom" secondItem="hiw-Lt-Qyf" secondAttribute="bottom" constant="17" id="sON-Dt-h5y"/>
-                    <constraint firstItem="w2b-qp-lxm" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" constant="20" symbolic="YES" id="tMd-S3-ONO"/>
+                    <constraint firstItem="w2b-qp-lxm" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="tMd-S3-ONO"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
