moved start button to a cell at the top of the table view

--- a/Meditator/Base.lproj/Main_iPhone.storyboard
+++ b/Meditator/Base.lproj/Main_iPhone.storyboard
@@ -24,11 +24,11 @@
             </objects>
             <point key="canvasLocation" x="-1098" y="-201"/>
         </scene>
-        <!--Navigation Controller - Instructions-->
+        <!--Navigation Controller - instructions-->
         <scene sceneID="URQ-FJ-HUP">
             <objects>
                 <navigationController definesPresentationContext="YES" id="sTg-Zz-mIA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Instructions" id="ZQ9-uB-5vw"/>
+                    <tabBarItem key="tabBarItem" title="instructions" id="ZQ9-uB-5vw"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="bNI-3l-MBO">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -90,11 +90,11 @@
             </objects>
             <point key="canvasLocation" x="43" y="630"/>
         </scene>
-        <!--Navigation Controller - More-->
+        <!--Navigation Controller - more-->
         <scene sceneID="NJO-37-Ctr">
             <objects>
                 <navigationController definesPresentationContext="YES" id="Jry-kT-8JL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="More" id="yhE-jG-3Rv"/>
+                    <tabBarItem key="tabBarItem" title="more" id="yhE-jG-3Rv"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="wFf-10-a2u">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -106,11 +106,11 @@
             </objects>
             <point key="canvasLocation" x="-493" y="630"/>
         </scene>
-        <!--Navigation Controller - Timer-->
+        <!--Navigation Controller - timer-->
         <scene sceneID="Olu-Gr-ojf">
             <objects>
                 <navigationController definesPresentationContext="YES" id="yuN-9I-F5G" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Timer" id="qFf-Ss-Qgd"/>
+                    <tabBarItem key="tabBarItem" title="timer" id="qFf-Ss-Qgd"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="bcB-xa-Jv4">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -145,13 +145,10 @@
                             <outlet property="delegate" destination="2LW-A1-fsL" id="Spv-yj-fdy"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="jNt-BR-ymA">
-                        <barButtonItem key="rightBarButtonItem" title="START" id="j25-kZ-e4X">
-                            <connections>
-                                <segue destination="DEm-Dj-T69" kind="modal" identifier="Timer Segue" modalTransitionStyle="flipHorizontal" id="fV2-Ke-bmb"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="jNt-BR-ymA"/>
+                    <connections>
+                        <segue destination="DEm-Dj-T69" kind="modal" identifier="Timer Segue" modalTransitionStyle="flipHorizontal" id="u5X-m3-StU"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZKS-SR-psD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
