--- a/Meditator/IntervalCell.xib
+++ b/Meditator/IntervalCell.xib
@@ -6,15 +6,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="IntervalCell" id="d2x-2u-OWV" customClass="IntervalCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="253"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="IntervalCell" rowHeight="171" id="d2x-2u-OWV" customClass="IntervalCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="207"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="d2x-2u-OWV" id="apk-w7-ofX">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="252"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="206"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNb-3S-Vjk">
-                        <rect key="frame" x="19" y="188" width="50" height="44"/>
+                        <rect key="frame" x="19" y="162" width="50" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="Lv7-lY-yHQ"/>
@@ -23,7 +23,7 @@
                         <state key="normal" title="0"/>
                     </button>
                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AIg-7Z-ClE">
-                        <rect key="frame" x="77" y="188" width="50" height="44"/>
+                        <rect key="frame" x="77" y="162" width="50" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="N2g-U5-azi"/>
@@ -32,7 +32,7 @@
                         <state key="normal" title="1"/>
                     </button>
                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o34-ap-K9R">
-                        <rect key="frame" x="135" y="188" width="50" height="44"/>
+                        <rect key="frame" x="135" y="162" width="50" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="VoP-I7-qa5"/>
@@ -41,7 +41,7 @@
                         <state key="normal" title="2"/>
                     </button>
                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2s4-Ck-NSc">
-                        <rect key="frame" x="193" y="188" width="50" height="44"/>
+                        <rect key="frame" x="193" y="162" width="50" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="Io4-Ii-ccZ"/>
@@ -50,7 +50,7 @@
                         <state key="normal" title="3"/>
                     </button>
                     <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tiv-Wy-4ZJ">
-                        <rect key="frame" x="251" y="188" width="50" height="44"/>
+                        <rect key="frame" x="251" y="162" width="50" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="7dd-gc-bJm"/>
@@ -59,8 +59,11 @@
                         <state key="normal" title="4"/>
                     </button>
                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aOh-b0-dv4">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="162" id="AAX-PK-CjX"/>
+                        </constraints>
                     </pickerView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JDh-Gr-2TG">
                         <rect key="frame" x="276" y="0.0" width="44" height="44"/>
@@ -86,13 +89,13 @@
                         </state>
                     </button>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interval 1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ode-MX-LeD">
-                        <rect key="frame" x="20" y="159" width="71" height="21"/>
+                        <rect key="frame" x="14" y="141" width="71" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="min" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Msv-yq-MoW">
-                        <rect key="frame" x="182" y="77" width="28" height="21"/>
+                        <rect key="frame" x="182" y="72" width="28" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="highlightedColor"/>
@@ -100,6 +103,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="JDh-Gr-2TG" secondAttribute="trailing" id="2kr-me-Y1H"/>
+                    <constraint firstAttribute="bottom" secondItem="TNb-3S-Vjk" secondAttribute="bottom" id="3Z8-Mc-Um7"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="AIg-7Z-ClE" secondAttribute="centerY" id="AGU-t7-5rR"/>
                     <constraint firstItem="2s4-Ck-NSc" firstAttribute="leading" secondItem="o34-ap-K9R" secondAttribute="trailing" constant="8" id="Ajt-Vz-fNP"/>
                     <constraint firstItem="Msv-yq-MoW" firstAttribute="centerX" secondItem="aOh-b0-dv4" secondAttribute="centerX" constant="36" id="Ayx-QL-eim"/>
@@ -109,27 +113,27 @@
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="tiv-Wy-4ZJ" secondAttribute="centerY" id="QVV-nL-vCE"/>
                     <constraint firstItem="aOh-b0-dv4" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" id="ScU-87-CK8"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="leading" secondItem="AIg-7Z-ClE" secondAttribute="trailing" constant="8" id="UYs-2a-RZU"/>
-                    <constraint firstItem="ode-MX-LeD" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" constant="20" id="aw1-gZ-GpN"/>
-                    <constraint firstItem="TNb-3S-Vjk" firstAttribute="top" secondItem="aOh-b0-dv4" secondAttribute="bottom" constant="8" symbolic="YES" id="bAq-cm-elG"/>
+                    <constraint firstItem="ode-MX-LeD" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" constant="14" id="aw1-gZ-GpN"/>
+                    <constraint firstItem="TNb-3S-Vjk" firstAttribute="top" secondItem="aOh-b0-dv4" secondAttribute="bottom" id="bAq-cm-elG"/>
                     <constraint firstItem="JDh-Gr-2TG" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" id="cu8-6f-JvQ"/>
                     <constraint firstItem="odB-nq-vLq" firstAttribute="leading" secondItem="apk-w7-ofX" secondAttribute="leading" id="hDJ-Pn-ZBc"/>
                     <constraint firstItem="tiv-Wy-4ZJ" firstAttribute="leading" secondItem="2s4-Ck-NSc" secondAttribute="trailing" constant="8" id="i10-eX-rEP"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="2s4-Ck-NSc" secondAttribute="centerY" id="jUw-gr-Fkx"/>
                     <constraint firstItem="ode-MX-LeD" firstAttribute="bottom" secondItem="aOh-b0-dv4" secondAttribute="bottom" id="l8H-RG-uG8"/>
                     <constraint firstItem="odB-nq-vLq" firstAttribute="top" secondItem="apk-w7-ofX" secondAttribute="top" id="mdp-Kk-PJr"/>
-                    <constraint firstItem="Msv-yq-MoW" firstAttribute="centerY" secondItem="aOh-b0-dv4" secondAttribute="centerY" constant="-3" id="oAo-av-ev1"/>
-                    <constraint firstAttribute="bottom" secondItem="TNb-3S-Vjk" secondAttribute="bottom" constant="20" id="oWv-aN-vHY"/>
+                    <constraint firstItem="Msv-yq-MoW" firstAttribute="centerY" secondItem="aOh-b0-dv4" secondAttribute="centerY" constant="1" id="oAo-av-ev1"/>
                     <constraint firstItem="o34-ap-K9R" firstAttribute="centerY" secondItem="TNb-3S-Vjk" secondAttribute="centerY" id="qtu-uW-jWD"/>
                     <constraint firstAttribute="trailing" secondItem="aOh-b0-dv4" secondAttribute="trailing" id="xvC-mM-eDl"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="buttonArrayToBottomConstraint" destination="oWv-aN-vHY" id="Eho-Wh-Ywn"/>
+                <outlet property="buttonArrayToBottomConstraint" destination="3Z8-Mc-Um7" id="Y7c-PL-cmN"/>
                 <outlet property="buttonHeightConstraint" destination="Lv7-lY-yHQ" id="rPc-br-lLU"/>
                 <outlet property="intervalLabel" destination="ode-MX-LeD" id="IhC-Xd-orR"/>
                 <outlet property="minutePickerView" destination="aOh-b0-dv4" id="fKw-kF-LWK"/>
                 <outlet property="resetButton" destination="JDh-Gr-2TG" id="ONc-SO-TRM"/>
                 <outlet property="toggleIntervalsButton" destination="odB-nq-vLq" id="CxF-ES-uAp"/>
+                <outlet property="topToMinutePickerViewConstraint" destination="ScU-87-CK8" id="FOX-HG-3yV"/>
                 <outletCollection property="buttonArray" destination="TNb-3S-Vjk" id="qq4-Lg-4zh"/>
                 <outletCollection property="buttonArray" destination="AIg-7Z-ClE" id="Jes-l8-gqy"/>
                 <outletCollection property="buttonArray" destination="o34-ap-K9R" id="Uz5-da-ChD"/>
