--- a/Meditator/SingleIntervalCell.xib
+++ b/Meditator/SingleIntervalCell.xib
@@ -7,15 +7,18 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SingleIntervalCell" rowHeight="207" id="x8s-Vv-kMf" customClass="IntervalCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x8s-Vv-kMf" id="Yrj-js-DDY">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="179"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hiw-Lt-Qyf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="162" id="y5h-6P-68o"/>
+                        </constraints>
                     </pickerView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mb3-b6-mG9">
                         <rect key="frame" x="276" y="0.0" width="44" height="44"/>
@@ -40,14 +43,14 @@
                         </state>
                     </button>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="min" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ohk-SZ-OEC">
-                        <rect key="frame" x="182" y="81" width="28" height="21"/>
+                        <rect key="frame" x="182" y="72" width="28" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Ohk-SZ-OEC" firstAttribute="centerY" secondItem="hiw-Lt-Qyf" secondAttribute="centerY" constant="10" id="7Bs-Ux-qrg"/>
+                    <constraint firstItem="Ohk-SZ-OEC" firstAttribute="centerY" secondItem="hiw-Lt-Qyf" secondAttribute="centerY" constant="1" id="7Bs-Ux-qrg"/>
                     <constraint firstAttribute="trailing" secondItem="mb3-b6-mG9" secondAttribute="trailing" id="FJi-d4-Kuu"/>
                     <constraint firstItem="hiw-Lt-Qyf" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="GyJ-qw-czj"/>
                     <constraint firstItem="mb3-b6-mG9" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="Mzh-ak-AUK"/>
@@ -55,7 +58,6 @@
                     <constraint firstItem="hiw-Lt-Qyf" firstAttribute="leading" secondItem="Yrj-js-DDY" secondAttribute="leading" id="Vos-aX-tL5"/>
                     <constraint firstAttribute="trailing" secondItem="hiw-Lt-Qyf" secondAttribute="trailing" id="eVe-Xz-fcl"/>
                     <constraint firstItem="Ohk-SZ-OEC" firstAttribute="centerX" secondItem="hiw-Lt-Qyf" secondAttribute="centerX" constant="36" id="qwx-2c-iU0"/>
-                    <constraint firstAttribute="bottom" secondItem="hiw-Lt-Qyf" secondAttribute="bottom" constant="17" id="sON-Dt-h5y"/>
                     <constraint firstItem="w2b-qp-lxm" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="tMd-S3-ONO"/>
                 </constraints>
             </tableViewCellContentView>
