--- a/Meditator/AppDetailsViewController.xib
+++ b/Meditator/AppDetailsViewController.xib
@@ -6,8 +6,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AppDetailsViewController">
             <connections>
+                <outlet property="appDescriptionLabel" destination="dW1-2q-965" id="uCO-si-KwC"/>
                 <outlet property="appNameLabel" destination="HZq-6T-FPA" id="gru-gJ-vbh"/>
-                <outlet property="appScreenShotButton" destination="38P-qB-TQ1" id="tfK-ez-GXe"/>
+                <outlet property="appScreenShotImageView" destination="38P-qB-TQ1" id="mER-KV-bxP"/>
                 <outlet property="iconImageView" destination="3cr-Ta-NDN" id="hT3-0p-LYX"/>
                 <outlet property="openStoreButton" destination="gPm-aY-XOb" id="fRL-9b-IlJ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -15,15 +16,15 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="746"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k57-0p-P1p">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="746"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="38P-qB-TQ1">
-                            <rect key="frame" x="20" y="128" width="280" height="420"/>
+                            <rect key="frame" x="20" y="115" width="280" height="420"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="420" id="Tfe-16-eed"/>
@@ -38,22 +39,27 @@
                                 <constraint firstAttribute="height" constant="60" id="rxB-eq-3Mh"/>
                             </constraints>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gPm-aY-XOb">
-                            <rect key="frame" x="20" y="90" width="280" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gPm-aY-XOb" customClass="RoundedRectButton">
+                            <rect key="frame" x="20" y="61" width="280" height="34"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="Open in iTunes">
+                                <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
                                 <action selector="openStore:" destination="-1" eventType="touchUpInside" id="ph4-BY-Xdg"/>
                             </connections>
                         </button>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HZq-6T-FPA">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="212" translatesAutoresizingMaskIntoConstraints="NO" id="HZq-6T-FPA">
                             <rect key="frame" x="88" y="20" width="212" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="60" id="lVf-3J-jtn"/>
-                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="dW1-2q-965">
+                            <rect key="frame" x="20" y="575" width="280" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
@@ -62,16 +68,19 @@
                     <constraints>
                         <constraint firstAttribute="centerX" secondItem="38P-qB-TQ1" secondAttribute="centerX" id="1wl-0D-09R"/>
                         <constraint firstItem="gPm-aY-XOb" firstAttribute="leading" secondItem="k57-0p-P1p" secondAttribute="leading" constant="20" id="5nv-iR-Ko3"/>
-                        <constraint firstItem="gPm-aY-XOb" firstAttribute="top" secondItem="3cr-Ta-NDN" secondAttribute="bottom" constant="10" id="8Gt-DO-aCV"/>
                         <constraint firstItem="HZq-6T-FPA" firstAttribute="leading" secondItem="3cr-Ta-NDN" secondAttribute="trailing" constant="8" id="Ay1-iP-PtA"/>
-                        <constraint firstItem="38P-qB-TQ1" firstAttribute="top" secondItem="gPm-aY-XOb" secondAttribute="bottom" constant="8" id="Cbh-3n-PJv"/>
+                        <constraint firstItem="38P-qB-TQ1" firstAttribute="top" secondItem="gPm-aY-XOb" secondAttribute="bottom" constant="20" id="Cbh-3n-PJv"/>
+                        <constraint firstItem="dW1-2q-965" firstAttribute="leading" secondItem="k57-0p-P1p" secondAttribute="leading" constant="20" id="D4T-wI-3hT"/>
+                        <constraint firstAttribute="bottom" secondItem="dW1-2q-965" secondAttribute="bottom" constant="20" symbolic="YES" id="PVg-no-xFs"/>
                         <constraint firstAttribute="centerX" secondItem="gPm-aY-XOb" secondAttribute="centerX" id="Q8F-ja-D6I"/>
                         <constraint firstItem="HZq-6T-FPA" firstAttribute="top" secondItem="k57-0p-P1p" secondAttribute="top" constant="20" id="SOv-ZM-H1D"/>
+                        <constraint firstAttribute="trailing" secondItem="dW1-2q-965" secondAttribute="trailing" constant="20" id="TlT-Zt-J4m"/>
                         <constraint firstItem="3cr-Ta-NDN" firstAttribute="leading" secondItem="k57-0p-P1p" secondAttribute="leading" constant="20" id="TmG-J0-IpU"/>
                         <constraint firstAttribute="trailing" secondItem="HZq-6T-FPA" secondAttribute="trailing" constant="20" id="VzH-3a-MhS"/>
                         <constraint firstItem="3cr-Ta-NDN" firstAttribute="top" secondItem="k57-0p-P1p" secondAttribute="top" constant="20" id="jFD-ow-N87"/>
+                        <constraint firstItem="gPm-aY-XOb" firstAttribute="top" secondItem="HZq-6T-FPA" secondAttribute="bottom" constant="20" id="mTQ-S1-N0f"/>
                         <constraint firstAttribute="trailing" secondItem="gPm-aY-XOb" secondAttribute="trailing" constant="20" id="rIK-w2-7lT"/>
-                        <constraint firstAttribute="bottom" secondItem="38P-qB-TQ1" secondAttribute="bottom" constant="20" id="wNC-5z-mSc"/>
+                        <constraint firstItem="dW1-2q-965" firstAttribute="top" secondItem="38P-qB-TQ1" secondAttribute="bottom" constant="40" id="sTU-fe-gwi"/>
                     </constraints>
                 </scrollView>
             </subviews>
@@ -82,7 +91,7 @@
                 <constraint firstAttribute="trailing" secondItem="k57-0p-P1p" secondAttribute="trailing" id="lRN-FT-XwZ"/>
                 <constraint firstItem="k57-0p-P1p" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="xTg-k0-q6E"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
 </document>
