--- a/Meditator/AppDetailsViewController.xib
+++ b/Meditator/AppDetailsViewController.xib
@@ -43,21 +43,21 @@
                             <rect key="frame" x="20" y="61" width="280" height="34"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="Open in iTunes">
-                                <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
                                 <action selector="openStore:" destination="-1" eventType="touchUpInside" id="ph4-BY-Xdg"/>
                             </connections>
                         </button>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="212" translatesAutoresizingMaskIntoConstraints="NO" id="HZq-6T-FPA">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="212" translatesAutoresizingMaskIntoConstraints="NO" id="HZq-6T-FPA" customClass="VariableHeightLabel">
                             <rect key="frame" x="88" y="20" width="212" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="dW1-2q-965">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="dW1-2q-965" customClass="VariableHeightLabel">
                             <rect key="frame" x="20" y="575" width="280" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -66,11 +66,11 @@
                         </label>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="centerX" secondItem="38P-qB-TQ1" secondAttribute="centerX" id="1wl-0D-09R"/>
                         <constraint firstItem="gPm-aY-XOb" firstAttribute="leading" secondItem="k57-0p-P1p" secondAttribute="leading" constant="20" id="5nv-iR-Ko3"/>
                         <constraint firstItem="HZq-6T-FPA" firstAttribute="leading" secondItem="3cr-Ta-NDN" secondAttribute="trailing" constant="8" id="Ay1-iP-PtA"/>
                         <constraint firstItem="38P-qB-TQ1" firstAttribute="top" secondItem="gPm-aY-XOb" secondAttribute="bottom" constant="20" id="Cbh-3n-PJv"/>
                         <constraint firstItem="dW1-2q-965" firstAttribute="leading" secondItem="k57-0p-P1p" secondAttribute="leading" constant="20" id="D4T-wI-3hT"/>
+                        <constraint firstItem="38P-qB-TQ1" firstAttribute="leading" secondItem="k57-0p-P1p" secondAttribute="leading" constant="20" id="Lgf-uM-5xJ"/>
                         <constraint firstAttribute="bottom" secondItem="dW1-2q-965" secondAttribute="bottom" constant="20" symbolic="YES" id="PVg-no-xFs"/>
                         <constraint firstAttribute="centerX" secondItem="gPm-aY-XOb" secondAttribute="centerX" id="Q8F-ja-D6I"/>
                         <constraint firstItem="HZq-6T-FPA" firstAttribute="top" secondItem="k57-0p-P1p" secondAttribute="top" constant="20" id="SOv-ZM-H1D"/>
